--- a/archives/2023-8-28.md
+++ b/archives/2023-8-28.md
@@ -3,40 +3,39 @@
  <!-- BEGIN -->
 
 1. [2023 年男篮世界杯，中国 69:89 南苏丹遭遇两连败，李凯尔 22+5，如何评价本场比赛？](https://www.zhihu.com/question/619514939)
-1. [教育部新出台的 101 计划会逐渐代替 985，211 吗？](https://www.zhihu.com/question/619324291)
 1. [考霸唐尚珺宣布继续复读，称别无选择，再战一年，如何看待此事？](https://www.zhihu.com/question/619463682)
 1. [知名快餐巨头赛百味 700 亿「卖身」，此前疯狂关店近 8000 家，哪些信息值得关注？](https://www.zhihu.com/question/619471760)
-1. [当中国经济驶入「恢复期」，研究者坦言要痛下决心转型升级，不要以 GDP 增速论英雄，如何看待这一观点？](https://www.zhihu.com/question/619484891)
-1. [武汉三镇官方「9 月 1 日起投资人将停止对三镇俱乐部投入资金，俱乐部正积极自救」，哪些信息值得关注？](https://www.zhihu.com/question/619523150)
-1. [C 罗接受测谎仪挑战，被问是否愿用所有欧冠换世界杯冠军，你猜他会如何选择？](https://www.zhihu.com/question/619483797)
 1. [商务部部长王文涛会见美国商务部长雷蒙多，此次见面有哪些信息值得关注？](https://www.zhihu.com/question/619480014)
-1. [《鹊刀门传奇》看过之后感觉不如《武林外传》好看，为什么如今拍不出像《武林外传》这样好看的情景喜剧？](https://www.zhihu.com/question/618929345)
-1. [两部门发布公告称「证券交易印花税减半」，是否预示A股即将进入牛市？](https://www.zhihu.com/question/619481780)
-1. [如何看待2023年8月28日A股市场？](https://www.zhihu.com/question/619466329)
-1. [老板暗示你下班走的太早了，该怎么反驳？](https://www.zhihu.com/question/619466774)
-1. [2023 年羽毛球世锦赛，中国队 1 金 1 银 4 铜收官，如何评价他们的表现？](https://www.zhihu.com/question/619474888)
-1. [一次去男朋友家吃饭，他妈妈在饭桌上说，「我儿子就是太老实我总怕他被小姑娘骗」，要怎么回复呢？](https://www.zhihu.com/question/618569270)
-1. [8 月 28 日，A 股开盘跳涨 5 % ，证券公司板块几乎全线涨停。如何解读 A 股这一反应？](https://www.zhihu.com/question/619477845)
 1. [TCL 新发布的 115 英寸超大屏电视 X11G Max，会成为豪宅顶配一步到位的首选吗?](https://www.zhihu.com/question/619523460)
+1. [两部门发布公告称「证券交易印花税减半」，是否预示A股即将进入牛市？](https://www.zhihu.com/question/619481780)
+1. [老板暗示你下班走的太早了，该怎么反驳？](https://www.zhihu.com/question/619466774)
 1. [男朋友说他这在心平气和地跟我说话，真的是这样吗？](https://www.zhihu.com/question/618005504)
+1. [2023 年羽毛球世锦赛，中国队 1 金 1 银 4 铜收官，如何评价他们的表现？](https://www.zhihu.com/question/619474888)
+1. [如何看待2023年8月28日A股市场？](https://www.zhihu.com/question/619466329)
+1. [C 罗接受测谎仪挑战，被问是否愿用所有欧冠换世界杯冠军，你猜他会如何选择？](https://www.zhihu.com/question/619483797)
 1. [2023赛季F1荷兰大奖赛维斯塔潘追平记录九连冠，阿隆索第二，加斯利第三，如何评价这场比赛？](https://www.zhihu.com/question/619416484)
-1. [电子发票算不算废物发明？](https://www.zhihu.com/question/619285772)
-1. [8 月底国内有什么适合游玩的地方，预算 5 千左右？](https://www.zhihu.com/question/612676497)
-1. [日本核污染水排海，还能去日本或国内沿海城市旅游吗？含核污染水的海水是否会对身体有危害？](https://www.zhihu.com/question/619081165)
-1. [如何评价《博德之门3》中的君主和王子两个人？](https://www.zhihu.com/question/617337970)
-1. [如果一周只上四天班，你会选择开展副业吗？](https://www.zhihu.com/question/617538757)
 1. [老婆希望妈妈搬出去，要怎么跟妈妈开口？](https://www.zhihu.com/question/613790110)
+1. [8 月 28 日，A 股开盘跳涨 5 % ，证券公司板块几乎全线涨停。如何解读 A 股这一反应？](https://www.zhihu.com/question/619477845)
+1. [如何评价《博德之门3》中的君主和王子两个人？](https://www.zhihu.com/question/617337970)
+1. [INTP的天赋是什么？](https://www.zhihu.com/question/619183297)
 1. [伏案久坐人群，如何靠运动健身减缓肚子脂肪增加？](https://www.zhihu.com/question/616296086)
 1. [为啥“摩尔”不能表示宏观物质？我用1摩尔人来表示6.02x10^23个人不行吗？](https://www.zhihu.com/question/608029623)
+1. [《鹊刀门传奇》看过之后感觉不如《武林外传》好看，为什么如今拍不出像《武林外传》这样好看的情景喜剧？](https://www.zhihu.com/question/618929345)
+1. [日本核污染水排海，还能去日本或国内沿海城市旅游吗？含核污染水的海水是否会对身体有危害？](https://www.zhihu.com/question/619081165)
+1. [当中国经济驶入「恢复期」，研究者坦言要痛下决心转型升级，不要以 GDP 增速论英雄，如何看待这一观点？](https://www.zhihu.com/question/619484891)
+1. [一次去男朋友家吃饭，他妈妈在饭桌上说，「我儿子就是太老实我总怕他被小姑娘骗」，要怎么回复呢？](https://www.zhihu.com/question/618569270)
+1. [武汉三镇官方「9 月 1 日起投资人将停止对三镇俱乐部投入资金，俱乐部正积极自救」，哪些信息值得关注？](https://www.zhihu.com/question/619523150)
 1. [宇宙的真相是什么？](https://www.zhihu.com/question/456518374)
-1. [外公病危，弥留之际，领导仍安排我周六日加班，应怎样做？](https://www.zhihu.com/question/55954407)
-1. [刚入职大厂程序员，感觉信仰崩塌，程序员到底为了什么？](https://www.zhihu.com/question/614549446)
-1. [如何评价瓦依那《乐队的夏天》第三季唱的《田歌》？](https://www.zhihu.com/question/619184043)
-1. [电影《孤注一掷》里的潘生到底是怎样的一个人？](https://www.zhihu.com/question/619123987)
+1. [8 月底国内有什么适合游玩的地方，预算 5 千左右？](https://www.zhihu.com/question/612676497)
+1. [教育部新出台的 101 计划会逐渐代替 985，211 吗？](https://www.zhihu.com/question/619324291)
 1. [作为医美过来人或从业者，你们有哪些专业医美建议或好的 「 经验之谈 」 ？](https://www.zhihu.com/question/619321829)
 1. [如何评价电视剧《一路朝阳》中李慕嘉的消费观？](https://www.zhihu.com/question/619285289)
+1. [如何评价瓦依那《乐队的夏天》第三季唱的《田歌》？](https://www.zhihu.com/question/619184043)
+1. [电影《孤注一掷》里的潘生到底是怎样的一个人？](https://www.zhihu.com/question/619123987)
 1. [2023 年你买到的跑鞋里边，穿着率最高的那款跑鞋能推荐一下吗？](https://www.zhihu.com/question/617459072)
+1. [如果一周只上四天班，你会选择开展副业吗？](https://www.zhihu.com/question/617538757)
 1. [有哪些智能家居产品是真正提升生活质量的神器？](https://www.zhihu.com/question/610110908)
+1. [刚入职大厂程序员，感觉信仰崩塌，程序员到底为了什么？](https://www.zhihu.com/question/614549446)
 1. [中午两个半小时空档，你是用来健身还是午休？](https://www.zhihu.com/question/618560610)
 1. [男生如何利用秋天好好护肤，让皮肤变得又白又干净？](https://www.zhihu.com/question/615983458)
 1. [到底为什么不建议使用SELECT * ？](https://www.zhihu.com/question/618678198)
@@ -52,5 +51,6 @@
 1. [带娃出行时，你是否有一种特别有用的随身携带物品，可以减轻你的负担和照顾孩子的难度？](https://www.zhihu.com/question/614481526)
 1. [有一只猫陪伴是种什么体验？](https://www.zhihu.com/question/486755014)
 1. [为什么公司需要产品经理这个岗位？](https://www.zhihu.com/question/558325043)
+1. [设想一下未来手机会是什么样子？](https://www.zhihu.com/question/616369526)
 
 <!-- END -->
