--- a/archives/2023-9-2.md
+++ b/archives/2023-9-2.md
@@ -2,55 +2,55 @@
  共50条
  <!-- BEGIN -->
 
+1. [2023 年男篮世界杯中国男篮75-96菲律宾，排位赛小组垫底，彻底无缘巴黎奥运，如何评价本场比赛？](https://www.zhihu.com/question/620299149)
 1. [北京官宣认房不认贷后开发商深夜涨价，售楼处通宵营业，有中介称大部分客户比较淡定，如何看待未来楼市趋势？](https://www.zhihu.com/question/620243875)
-1. [2023 年男篮世界杯排位赛中国男篮75-96菲律宾，无缘直通奥运，李凯尔17+9，如何评价本场比赛？](https://www.zhihu.com/question/620299149)
-1. [如何评价第 40 届全国中学生物理竞赛预赛？](https://www.zhihu.com/question/620255679)
-1. [如果新房入住发现甲醛超标，有没有「甲醛急诊室」可以快速补救？](https://www.zhihu.com/question/616610698)
+1. [中国男篮惨败于菲律宾，如何评价主教练乔尔杰维奇？](https://www.zhihu.com/question/620298827)
 1. [23-24 赛季意甲罗马 1:2 AC米兰，莱奥倒钩破门，吉鲁点射，如何评价这场比赛？](https://www.zhihu.com/question/620206487)
+1. [你碰到过的最巧的事是什么？](https://www.zhihu.com/question/24114663)
 1. [机械硬盘买16T或18T有意义吗?](https://www.zhihu.com/question/542252741)
-1. [女子同时供职 16 家公司却从不上班，全国骗薪群体至少有七八百人，为何会出现此类骗薪群体？](https://www.zhihu.com/question/619972219)
+1. [如果新房入住发现甲醛超标，有没有「甲醛急诊室」可以快速补救？](https://www.zhihu.com/question/616610698)
 1. [普通人没经过训练，在生死存亡之际，能不能拿命在 20 分钟跑完 5 公里？](https://www.zhihu.com/question/421947026)
-1. [动画《EVA》中，seele的高层究竟为何有那么强的动力去推动补完计划，于个人能得到什么好处吗？](https://www.zhihu.com/question/608481745)
+1. [如何评价第 40 届全国中学生物理竞赛预赛？](https://www.zhihu.com/question/620255679)
 1. [河南一县属国企花 3 亿买五千台无人机，用于机场运营，机场投资约 2.47 亿且未建成，如何看待此事？](https://www.zhihu.com/question/620188614)
-1. [英外交部发声明称支持日本核污染水排海，我驻英使馆回应，哪些信息值得关注？](https://www.zhihu.com/question/620243278)
-1. [《长相思》为什么涂山璟退不掉防风意映这个未婚妻？](https://www.zhihu.com/question/620185556)
-1. [广西大学生「硬核」军训出圈，包括「暴雨中行进、战术演练」等项目，如何看待这一形式？适合全国推广吗？](https://www.zhihu.com/question/620159484)
-1. [如何用一句话证明你是天文系的？](https://www.zhihu.com/question/600284364)
-1. [印度 Aditya-L1 太阳探测器发射升空，对印度和世界航天科技发展具有哪些意义？](https://www.zhihu.com/question/619647498)
+1. [女子同时供职 16 家公司却从不上班，全国骗薪群体至少有七八百人，为何会出现此类骗薪群体？](https://www.zhihu.com/question/619972219)
+1. [动画《EVA》中，seele的高层究竟为何有那么强的动力去推动补完计划，于个人能得到什么好处吗？](https://www.zhihu.com/question/608481745)
 1. [荷兰光刻机出口管制明日生效，商务部回应中荷是否有新的磋商结果，哪些信息值得关注？](https://www.zhihu.com/question/620003791)
-1. [特斯拉 Model S/ X 最高降价 22 万元，车主联合声明要求进行合理补偿，如何看待此事？](https://www.zhihu.com/question/620200678)
+1. [《长相思》为什么涂山璟退不掉防风意映这个未婚妻？](https://www.zhihu.com/question/620185556)
+1. [印度 Aditya-L1 太阳探测器发射升空，对印度和世界航天科技发展具有哪些意义？](https://www.zhihu.com/question/619647498)
+1. [广西大学生「硬核」军训出圈，包括「暴雨中行进、战术演练」等项目，如何看待这一形式？适合全国推广吗？](https://www.zhihu.com/question/620159484)
 1. [如何称呼女导师的丈夫？](https://www.zhihu.com/question/620008264)
-1. [为什么很多数学系的学生都喜欢跑步？](https://www.zhihu.com/question/616313250)
-1. [因女朋友说「男教师是女教师择偶的下限，女教师是男教师择偶的上限」而分手，是我的错吗？为何有这种观点？](https://www.zhihu.com/question/619195315)
+1. [如何用一句话证明你是天文系的？](https://www.zhihu.com/question/600284364)
+1. [特斯拉 Model S/ X 最高降价 22 万元，车主联合声明要求进行合理补偿，如何看待此事？](https://www.zhihu.com/question/620200678)
+1. [欧洲五大联赛夏窗关闭，英超造两大标王，切尔西砸4.6亿创纪录，如何评价夏窗转会，对你的主队引援满意吗？](https://www.zhihu.com/question/620237808)
 1. [日本福岛核污染水排海进入第 5 天，累计排放量已超千吨，目前影响如何？](https://www.zhihu.com/question/619552802)
-1. [如何评价短剧《逃出大英博物馆》？](https://www.zhihu.com/question/619841416)
-1. [卢卡库租借加盟罗马，将身披90号球衣，如何评价卢卡库的职业生涯，他为何无法立足欧洲顶级豪门？](https://www.zhihu.com/question/620018503)
-1. [女生想买台轻薄本，不玩游戏，偶尔进行视频剪辑，有何推荐？](https://www.zhihu.com/question/617704843)
-1. [有哪些值得一去的小众出境旅行地？](https://www.zhihu.com/question/620061553)
-1. [耳机的频响曲线能直观反映声音吗?](https://www.zhihu.com/question/619399456)
-1. [学生的未来是他自己的，作为硕士导师是否应该劝学生读博？](https://www.zhihu.com/question/618109718)
-1. [澳大利亚留学有什么建议?](https://www.zhihu.com/question/608609447)
-1. [购买笔记本电脑多大内存起步为宜?内存是越大越好吗?](https://www.zhihu.com/question/618881677)
+1. [英外交部发声明称支持日本核污染水排海，我驻英使馆回应，哪些信息值得关注？](https://www.zhihu.com/question/620243278)
+1. [描写「秋」的古诗词有哪些？](https://www.zhihu.com/question/620130346)
+1. [怎样才能让自己不胆怯，敢在大众面前说话，并且有话说，不脸红，怎么克服?](https://www.zhihu.com/question/308078274)
+1. [我的领导想提拔人做我的副手，但是我没看上怎么办？](https://www.zhihu.com/question/619864364)
+1. [能分享你播放次数最多的歌吗？](https://www.zhihu.com/question/620183390)
+1. [中国男篮世界杯三战皆输，无缘巴黎奥运会直通资格，这届中国男篮是史上最差男篮吗，原因出在哪？](https://www.zhihu.com/question/619961731)
+1. [孩子11岁，极度厌学，已经辍学长达4年，经常熬夜，如何挽救？](https://www.zhihu.com/question/620035176)
+1. [入职第一天，给新同事带点什么礼物好？](https://www.zhihu.com/question/619704045)
 1. [如果命运的齿轮开始倒转，你最希望回到哪个时间节点？](https://www.zhihu.com/question/620147099)
-1. [在观看诺兰新片《奥本海默》前，了解哪些信息可以更好地理解这部真实事件改编的电影？](https://www.zhihu.com/question/619675304)
-1. [3岁半孩子不想去幼儿园，要不要硬送？](https://www.zhihu.com/question/618731043)
-1. [美的美家系列空调和其它空调有何区别，美的空调技术是杀疯了吗？](https://www.zhihu.com/question/620011326)
-1. [如何评价《崩坏星穹铁道》1.3版本过场动画：景元罗刹与镜流？](https://www.zhihu.com/question/619946628)
+1. [研究生实习后说「感觉打工人才是最惨的，一上班感觉精气都被吸光」你怎么看？](https://www.zhihu.com/question/619499566)
+1. [证监会强化对高频交易的监管，沪深交易所对申报笔数达两万笔以上等四类交易行为实时监控，哪些信息值得关注？](https://www.zhihu.com/question/620177686)
+1. [为何intel64位的汇编教程几乎没有？](https://www.zhihu.com/question/59928781)
+1. [你认为什么样的工作容易被取代？你目前的工作容易被替代么？](https://www.zhihu.com/question/619160841)
 1. [央行 9 月 15 日起下调金融机构外汇存款准备金率 2 个百分点，将产生哪些影响？](https://www.zhihu.com/question/620117328)
-1. [看书应该先看什么类的书？](https://www.zhihu.com/question/611169301)
-1. [含有“春”字的古诗词有哪些?](https://www.zhihu.com/question/620054491)
-1. [无钥匙进入功能实用吗？](https://www.zhihu.com/question/617714157)
-1. [如何评价《披荆斩棘》第三季的一公舞台（下）？](https://www.zhihu.com/question/620243230)
+1. [怎么才能避免孩子厌学？](https://www.zhihu.com/question/619468724)
+1. [做竞赛题厉害的人适合去科研吗？](https://www.zhihu.com/question/615484050)
+1. [开学第一天，你有哪些难忘的经历？](https://www.zhihu.com/question/619680519)
+1. [为什么全新价格五六万的高端电脑卖二手不好卖？](https://www.zhihu.com/question/619464064)
 1. [六大行半年报出炉，盈利合计 6900 亿元，不良贷款率「五降一平」，如何解读银行业上半年业绩情况？](https://www.zhihu.com/question/620160315)
 1. [新学期你是否会选择打工为自己增加生活费？有哪些好的建议？](https://www.zhihu.com/question/620019842)
-1. [如何评价海贼王第1091话?](https://www.zhihu.com/question/620020126)
-1. [如何评价《乐队的夏天》第三季第四期？](https://www.zhihu.com/question/620115170)
-1. [欧冠夺冠赔率：曼城最被看好，拜仁次席，皇马第三，阿森纳第 4，纽卡第 8，你认为谁最有可能夺冠？](https://www.zhihu.com/question/620115213)
-1. [微软宣布 2024 年停止支持 Mac 版 Visual Studio IDE，如何看待企业此举？](https://www.zhihu.com/question/619961779)
-1. [如何评价《英雄联盟》新英雄「贝蕾亚」的技能设定？](https://www.zhihu.com/question/619988927)
-1. [詹秋怡问 AI「如何让骆驼在沙漠里陪我吃火锅」，你有向 AI 提过什么刁钻的问题，得到了什么回答呢？](https://www.zhihu.com/question/619145432)
-1. [《星空》游戏媒体 IGN/GS 双 7 分，如何评价该评分，B 社能否继续做好《上古卷轴6》？](https://www.zhihu.com/question/620086485)
-1. [有没有读博的人给目前研三工科女生的忠告?](https://www.zhihu.com/question/619810865)
+1. [为什么很多数学系的学生都喜欢跑步？](https://www.zhihu.com/question/616313250)
+1. [因女朋友说「男教师是女教师择偶的下限，女教师是男教师择偶的上限」而分手，是我的错吗？为何有这种观点？](https://www.zhihu.com/question/619195315)
+1. [如何评价《披荆斩棘》第三季的一公舞台（上）？](https://www.zhihu.com/question/620115393)
+1. [如何评价贝塞斯达新作《星空》首发评分IGN、GS双7，这款游戏哪里不符合期待了吗？](https://www.zhihu.com/question/620087133)
+1. [想问问大家的猫咪都叫什么名字？](https://www.zhihu.com/question/421564938)
+1. [《英雄联盟》百裂冥犬是不是设计的很失败？](https://www.zhihu.com/question/619518778)
+1. [小猫是怎么理解搬家的？](https://www.zhihu.com/question/619958326)
+1. [20岁，大专毕业，一无是处，还有机会挽救自己吗?](https://www.zhihu.com/question/614081488)
 1. [台风苏拉一天两次登陆广东，目前当地情况如何？未来走向如何？](https://www.zhihu.com/question/620269652)
 
 <!-- END -->
