--- a/archives/2023-9-6.md
+++ b/archives/2023-9-6.md
@@ -5,52 +5,52 @@
 1. [塞尔维亚男篮球员遭对手肘击后，因菲律宾医院无法找到供血，无奈摘除肾脏，如何看待这一后果？](https://www.zhihu.com/question/620603343)
 1. [英国伯明翰市政府宣布破产，哪些信息值得关注？](https://www.zhihu.com/question/620640219)
 1. [日本新技术可将氮化镓半导体材料制造成本降 90%，这将带来哪些影响？](https://www.zhihu.com/question/620623666)
-1. [尹锡悦称「中日韩三方合作应重回正轨，韩方将竭尽全力」，如何解读？这一想法面临哪些障碍？](https://www.zhihu.com/question/620634962)
 1. [印度国名或将更改为「巴拉特」，印媒爆料「莫迪政府可能将在议会特别会议上提出决议」，如何看待此事？](https://www.zhihu.com/question/620649945)
-1. [9 月 5 日离岸人民币兑美元跌破 7.31 关口，日内跌超 300 个基点，发生了什么？](https://www.zhihu.com/question/620622387)
-1. [生活中哪些曾经免费的东西，突然开始收费了？](https://www.zhihu.com/question/620618060)
 1. [五百万人民币与永不损坏、空间无限的硬盘（不允许对外公开）你选哪个？](https://www.zhihu.com/question/620584625)
+1. [9 月 5 日离岸人民币兑美元跌破 7.31 关口，日内跌超 300 个基点，发生了什么？](https://www.zhihu.com/question/620622387)
 1. [内马尔接受采访时称「我与梅西在巴黎经历了地狱」，如何评价这一言论？](https://www.zhihu.com/question/620480089)
-1. [李彦宏称「卷大模型没意义，卷应用机会更大」，如何理解？什么是 AI 原生应用？](https://www.zhihu.com/question/620624155)
-1. [2023 年男篮世界杯，美国 100:63 意大利晋级半决赛，布里奇斯 24+7，如何评价本场比赛？](https://www.zhihu.com/question/620649000)
-1. [中国新能源技术的突破，给中型车市场格局带来了哪些改变?](https://www.zhihu.com/question/620608514)
+1. [华为Mate60Pro会成为华为下一款现象级的产品吗？](https://www.zhihu.com/question/620135913)
+1. [福州启动暴雨 Ⅰ 级应急响应，多路段积水实行临时交通管制，目前当地情况如何？](https://www.zhihu.com/question/620701147)
 1. [对于养老，高楼层和低楼层哪个更合适？](https://www.zhihu.com/question/618285994)
+1. [华为新款手机引外媒热议，「美国制裁阻止不了中国关键技术进步」，如何评价相关报道？](https://www.zhihu.com/question/620602442)
+1. [中国新能源技术的突破，给中型车市场格局带来了哪些改变?](https://www.zhihu.com/question/620608514)
+1. [沙特延长减产措施，日均减产 100 万桶的措施再延三个月，将产生哪些影响？](https://www.zhihu.com/question/620646172)
+1. [关于「白露」节气的诗词或文案，你能想到哪些？](https://www.zhihu.com/question/620614311)
 1. [美媒票选重排历史前十乔丹第一，科比进前五，你心目中的排名如何？](https://www.zhihu.com/question/619846064)
+1. [李彦宏称「卷大模型没意义，卷应用机会更大」，如何理解？什么是 AI 原生应用？](https://www.zhihu.com/question/620624155)
+1. [生活中哪些曾经免费的东西，突然开始收费了？](https://www.zhihu.com/question/620618060)
 1. [大一新生，家长要求孩子把每顿吃饭的钱记录下来并发给他们，合理吗？](https://www.zhihu.com/question/620178814)
 1. [围棋、象棋这种游戏至今为止是否真的是“千古无同局”？](https://www.zhihu.com/question/616029755)
-1. [现代医学发展那么快，100年后人类医学能发展到什么程度，哪些黑科技将被应用于医学领域？](https://www.zhihu.com/question/620142758)
-1. [都说现在的消费者买车越来越不只看重「车标」了，是理智还是盲目？](https://www.zhihu.com/question/535236537)
-1. [北京接诊多例雷暴哮喘患者，过敏高峰期预计持续 2-3 周，为何多地出现雷暴哮喘患者？要注意哪些问题？](https://www.zhihu.com/question/620620931)
-1. [成都万人小区欲「自拆自建」，99%的业主同意仍难以推进，这种模式实现的困难点在哪？有无解决方式？](https://www.zhihu.com/question/620463707)
-1. [专家称取消公摊购房者占不到便宜，还显得吃亏不少，如何看待这一说法？](https://www.zhihu.com/question/619975424)
+1. [尹锡悦称「中日韩三方合作应重回正轨，韩方将竭尽全力」，如何解读？这一想法面临哪些障碍？](https://www.zhihu.com/question/620634962)
 1. [婚礼前夕，七夕第二天未婚夫和高中女同学约饭，晚上逛外滩。现在我该咋办?](https://www.zhihu.com/question/619671809)
+1. [都说现在的消费者买车越来越不只看重「车标」了，是理智还是盲目？](https://www.zhihu.com/question/535236537)
+1. [专家称取消公摊购房者占不到便宜，还显得吃亏不少，如何看待这一说法？](https://www.zhihu.com/question/619975424)
+1. [2023 年男篮世界杯，美国 100:63 意大利晋级半决赛，布里奇斯 24+7，如何评价本场比赛？](https://www.zhihu.com/question/620649000)
+1. [成都万人小区欲「自拆自建」，99%的业主同意仍难以推进，这种模式实现的困难点在哪？有无解决方式？](https://www.zhihu.com/question/620463707)
 1. [日本就「中国水产品禁令」向 WTO 提交文件，美驻日大使曾宣称「将支持日本这一行动」，透露哪些信息？](https://www.zhihu.com/question/620588640)
 1. [茅台和瑞幸跨界，多少杯瑞幸酱香拿铁可以提炼出一瓶茅台？](https://www.zhihu.com/question/620460675)
 1. [究竟是mac性能不能运行游戏还是游戏厂商懒得适配macOS？](https://www.zhihu.com/question/459133954)
-1. [如何评价《明日方舟》新干员涤火杰西卡?](https://www.zhihu.com/question/620582524)
+1. [现代医学发展那么快，100年后人类医学能发展到什么程度，哪些黑科技将被应用于医学领域？](https://www.zhihu.com/question/620142758)
+1. [北京接诊多例雷暴哮喘患者，过敏高峰期预计持续 2-3 周，为何多地出现雷暴哮喘患者？要注意哪些问题？](https://www.zhihu.com/question/620620931)
 1. [酱香拿铁一天卖出 542 万杯，销售额破亿，供应商称「原料加了价值三千万茅台」，哪些信息值得关注？](https://www.zhihu.com/question/620606984)
-1. [大家有推荐的好书吗？](https://www.zhihu.com/question/620282135)
-1. [有哪些漫画或小说十分好看，但改编的动画却堪称毁原作?](https://www.zhihu.com/question/450330842)
-1. [命运的齿轮开始倒转后，你又做了哪些努力让你的命运开始反转？](https://www.zhihu.com/question/620148473)
-1. [从生椰入咖啡到酒入咖啡，饮品高级感拉满，有人戏称这是「咖啡高端局」，你觉得咖啡高端局还有哪些打开方式？](https://www.zhihu.com/question/620512390)
-1. [Bethesda应该换掉Creation Engine吗？](https://www.zhihu.com/question/620537115)
-1. [猫咪咬人应怎么制裁它？](https://www.zhihu.com/question/620374437)
-1. [2023 Google 开发者大会助力「多元共进」，有料的技术干货和丰富的互动形式，最打动你的是什么？](https://www.zhihu.com/question/619500572)
-1. [WPS AI 通过金山文档正式开放使用，效果如何？将带来哪些影响？](https://www.zhihu.com/question/620590097)
-1. [楼市新政下，深圳开发商撤掉两成首付海报，北京二手房业主「趁着热度，降价先成交」，如何看待当下市场行情？](https://www.zhihu.com/question/620576227)
-1. [如何看待deepin推出中国首款信创生态自研IDE?](https://www.zhihu.com/question/620495466)
-1. [「把字刻在石头上」真的是最长久的保存信息的方案吗，未来人类有哪些长久保存信息的手段？](https://www.zhihu.com/question/620186584)
-1. [体制内真能将办公桌面打理得很时尚吗？](https://www.zhihu.com/question/619650022)
-1. [福州启动暴雨 Ⅰ 级应急响应，多路段积水实行临时交通管制，目前当地情况如何？](https://www.zhihu.com/question/620701147)
-1. [诺兰的《奥本海默》值得一看吗？](https://www.zhihu.com/question/620148032)
-1. [总是称赞孩子聪明，对孩子的成长有益吗？](https://www.zhihu.com/question/620208635)
+1. [「酒」进入咖啡高端局，是加分项还是减分项？](https://www.zhihu.com/question/620512533)
+1. [给你一千万，你会发生什么变化？](https://www.zhihu.com/question/620311279)
+1. [吴晓求称大家都意识到市场有问题，但没意识到根源在哪，中国资本市场一定要完成功能转型，如何看待这一观点？](https://www.zhihu.com/question/620485658)
+1. [高三只吃早饭和晚饭会不会拖垮身体?](https://www.zhihu.com/question/620494148)
+1. [如何看待开放式蓝牙耳机目前逐渐火热，未来会不会逐步成为蓝牙耳机新趋势？](https://www.zhihu.com/question/614885970)
+1. [本人喜欢跑步，请问一下购买什么品牌的运动手表比较适合？](https://www.zhihu.com/question/619406165)
+1. [开学了，有哪些好的学习物品可以给孩子推荐下？](https://www.zhihu.com/question/620510093)
+1. [有哪些瞬间让你觉得高中生活很美好？](https://www.zhihu.com/question/375645889)
+1. [力量训练对老年人的重要性有多大？](https://www.zhihu.com/question/24944315)
+1. [时已入秋，有那些写秋天的诗句惊艳了你？](https://www.zhihu.com/question/618745297)
+1. [蒋依依工作室回应被举报偷税漏税，对未能按时履行纳税义务深感抱歉，哪些信息值得关注？](https://www.zhihu.com/question/620494632)
 1. [国家医保局印发通知，明确纳入医保支付的耗材范围，哪些信息值得关注？](https://www.zhihu.com/question/620600269)
-1. [初秋大家有哪些香味高级又有氛围感的身体乳和沐浴露推荐？](https://www.zhihu.com/question/616665156)
-1. [光大银行确认「固定利率房贷也可申请降低」，将带来哪些影响？](https://www.zhihu.com/question/620525618)
+1. [Bethesda应该换掉Creation Engine吗？](https://www.zhihu.com/question/620537115)
+1. [假如有一个地方始终下特大暴雨，人要怎么生存呀？](https://www.zhihu.com/question/620135421)
+1. [预算 500- 1000 元，有哪些便携好用的电动剃须刀适合送给男朋友？](https://www.zhihu.com/question/614864772)
 1. [如果审判官发现了第一军团小秘密会发生什么?](https://www.zhihu.com/question/616747672)
-1. [你最喜欢哪些禅意诗词？](https://www.zhihu.com/question/582562632)
-1. [请问国内外有哪些奇怪的酒？](https://www.zhihu.com/question/61691475)
-1. [有效护肤是智商税吗？](https://www.zhihu.com/question/551879611)
-1. [2024 材料硕士秋招进展如何？](https://www.zhihu.com/question/611877772)
+1. [可以看一下你们手机里的天空吗？](https://www.zhihu.com/question/610979728)
+1. [用完电脑一定要关机吗？](https://www.zhihu.com/question/619463902)
+1. [突然想通了是一种什么体验？](https://www.zhihu.com/question/27765439)
 
 <!-- END -->
